--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <link rel="stylesheet" href="/build/css/app.css">
+        <link rel="icon" type="image/png" href="{{ asset('build/favicon.png') }}" />
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
     </head>
     <body>
+    <header>
+        {% include '/include/_navbar.html.twig' %}
+    </header>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
+        <img src="{{ asset('build/path_to_image.png') }}" alt=""/>
+        <script src="/build/app.js"></script>
     </body>
-</html>
+</html>git status
+git status
