--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,5 +20,4 @@
         <img src="{{ asset('build/path_to_image.png') }}" alt=""/>
         <script src="/build/app.js"></script>
     </body>
-</html>git status
-git status
+</html>
