--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -3,6 +3,11 @@
 $primary-color: #264653;
 $secondary-color: #F4A261;
 
+$theme-colors: (
+        "primary": $primary-color,
+        "secondary": $secondary-color
+);
+
 .navbar {
   background-color: $primary-color;
   color: $secondary-color;
