--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -5,16 +5,15 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Toutes les séries de la table program : </h1>
+    <h1>Liste des séries :</h1><br>
     {% for program in programs %}
         <div>
             <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
             <p>{{ program.summary }}</p>
         </div>
-        <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+        <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a><br>
     {% else %}
         Aucune série trouvée.
     {% endfor %}
-
     <a href="{{ path('app_index') }}">Retour à l'accueil</a>
 {% endblock %}
