--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -9,8 +9,12 @@
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.summary }}</p>
             <p>Catégorie : {{ program.category.name }}</p>
+            <ul>
+                {% for season in seasons %}
+                    <li><a href="{{ path('program_season_show', {programId: program.id, seasonId: season.id}) }}">Saison {{ season.number }}</a></li>
+                {% endfor %}
+            </ul>
+            <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
         </div>
     </div>
-
-    <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
 {% endblock %}
