--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -6,7 +6,7 @@
     <p>Liste des épisode</p>
     <ul>
         {% for episode in episodes %}
-            <li>{{ episode.title }}</li>
+            <li><a href="{{ path("program_episode_show", { program: program.id, season: season.number, episode: episode.id }) }}">{{ episode.title }}</a></li>
         {% endfor %}
     </ul>
     <a href="{{ path("program_show", { id: program.id }) }}">Retour à la fiche</a>
