--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -8,6 +8,14 @@
         <div class="media-body">
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.summary }}</p>
+            <strong>Acteurs :</strong>
+            <ul>
+                {% for actor in program.actors %}
+                    <li>{{ actor.name }} </li>
+                {% else %}
+                    <li>Aucun acteur pour cette série</li>
+                {% endfor %}
+            </ul>
             <p>Catégorie : {{ program.category.name }}</p>
             <ul>
                 {% for season in seasons %}
