--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Wild Series</h1>
-    <a href="{{ path('program_index') }}">Voir la liste des programmes</a>
+    <section class="accueil">
+        <h1>Wild Series</h1>
+        <a href="{{ path('program_index') }}">Voir la liste des programmes</a>
+    </section>
+
 {% endblock %}
