--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,76 @@
-body {
-    background-color: lightgray;
+@import 'variables.scss';
+
+.navbar {
+    position: fixed;
+    box-shadow: $box-shadow;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
 }
+
+.logo {
+    width: 50px;
+}
+
+.accueil {
+    background-image: url('../images/index_picture.png');
+    background-size: 1000px;
+    background-repeat: no-repeat;
+    height: 1000px;
+    background-position-x: center;
+}
+
+.accueil a {
+    top: 1000px;
+}
+
+.accueil h1 {
+    margin-top: 200px;
+    font-family: 'Sail', sans-serif;
+    font-size: 10rem;
+}
+
+h1, h2 {
+    color: $secondary;
+}
+
+.text-home {
+    font-family: 'Sail', sans-serif;
+    font-size: 1.5rem;
+    padding: 0;
+}
+body {
+    background-color: $primary;
+}
+
+.accueil {
+    text-align: center;
+    margin-top: 100px;
+
+}
+
+p {
+    color: $secondary;
+    text-align: left;
+}
+
+.movie {
+    border: 2px solid black;
+    border-radius: 8px;
+    margin: 50px 0;
+    padding-left: 0;
+    box-shadow: $box-shadow;
+}
+
+.poster {
+    padding-left: 0;
+    border-radius: 8px 0 0 8px;
+    height: 100%;
+    width: 100%;
+}
+
+a {
+    color: $secondary;
+}
+
