--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -3,4 +3,6 @@ $secondary: #F4A261;
 $box-shadow: 3px 3px 15px 0px rgba(0, 0, 0, 0.75);
 
 @import url('https://fonts.googleapis.com/css2?family=Sail&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Salsa&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Risque&display=swap');
 @import '~bootstrap/scss/bootstrap';
