--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -6,8 +6,8 @@
     <p>Liste des épisode</p>
     <ul>
         {% for episode in episodes %}
-            <li><a href="{{ path("program_episode_show", { program: program.id, season: season.id, episode: episode.id }) }}">{{ episode.title }}</a></li>
+            <li><a href="{{ path("program_episode_show", { program_slug: program.slug, season: season.id, episode_slug: episode.slug }) }}">{{ episode.title }}</a></li>
         {% endfor %}
     </ul>
-    <a href="{{ path("program_show", { id: program.id }) }}">Retour à la fiche</a>
+    <a href="{{ path("program_show", { slug: program.slug }) }}">Retour à la fiche</a>
 {% endblock %}
