--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -25,6 +25,11 @@
     top: 1000px;
 }
 
+h2 {
+    text-align: center;
+    font-family: 'Salsa', sans-serif;
+}
+
 .accueil h1 {
     margin-top: 200px;
     font-family: 'Sail', sans-serif;
@@ -33,6 +38,7 @@
 
 h1, h2 {
     color: $secondary;
+    margin-top: 50px;
 }
 
 .text-home {
@@ -50,7 +56,12 @@ body {
 
 }
 
+.button {
+    text-align: center;
+}
+
 p {
+    font-family: 'risque', sans-serif;
     color: $secondary;
     text-align: left;
 }
