--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -4,7 +4,7 @@
     <h1>{{ actor.name }}</h1>
     <ul>
         {% for program in programs %}
-            <a href="{{ path('program_show', {id: program.id}) }}"><li>{{ program.title }}</li></a>
+            <a href="{{ path('program_show', {slug: program.slug}) }}"><li>{{ program.title }}</li></a>
         {% endfor %}
     </ul>
 {% endblock %}
