--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -5,7 +5,7 @@
         <li>{{ category.name }}</li>
     </ul>
     {% for program in programs %}
-        <h2>{{ program.id }} - {{ program.title }}</h2>
+        <h2><a href="{{ path('program_show', {slug: program.slug}) }}">{{ program.title }}</a></h2>
         <p>{{ program.summary }}</p>
     {% else %}
         Aucune série trouvée
