--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -10,7 +10,7 @@
                 <a class="nav-link text-secondary text-home" href="#">Wild Series<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">Link</a>
+                <a class="nav-link text-secondary" href="/categories/">Link</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
