--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -19,7 +19,7 @@
             <p>Catégorie : {{ program.category.name }}</p>
             <ul>
                 {% for season in seasons %}
-                    <li><a href="{{ path('program_season_show', {program: program.id, season: season.id}) }}">Saison {{ season.number }}</a></li>
+                    <li><a href="{{ path('program_season_show', {slug: program.slug, season: season.id}) }}">Saison {{ season.number }}</a></li>
                 {% endfor %}
             </ul>
             <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
