--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -1,10 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div>
+    <section>
         <h1>{{ program.title }} - Saison {{ season.id }} - Episode {{ episode.number }}</h1>
         <h2>{{ episode.title }}</h2>
         <p>{{ episode.synopsis }}</p><br>
+        <h2>Commentaires</h2>
+        {% for comment in episode.comments %}
+            <p>User : {{ comment.author.email }}</p>
+            <p>Note : {{ comment.rate }}/ 10</p>
+            <p>Commentaire : {{ comment.comment }}</p>
+            <hr>
+        {% endfor %}
+        {% if app.user %}
+            <h2>Laisser un commentaire</h2>
+            {{ include('episode/_form.html.twig') }}
+        {% endif %}
         <a href="{{ path('program_season_show', {slug: program.slug, season: season.id}) }}">Retour sur la saison {{ season.id }}</a>
-    </div>
+    </section>
+
 {% endblock %}
