--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -3,26 +3,28 @@
 {% block title %}Série #{{ program.id }} {% endblock %}
 
 {% block body %}
-    <div class="media">
-        <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
-        <div class="media-body">
-            <h1 class="mt-0">{{ program.title }}</h1>
-            <p>{{ program.summary }}</p>
-            <strong>Acteurs :</strong>
-            <ul>
-                {% for actor in program.actors %}
-                <li><a href="{{ path('actor_show', {id: actor.id}) }}">{{ actor.name }}</a></li>
-                {% else %}
-                    <li>Aucun acteur pour cette série</li>
-                {% endfor %}
-            </ul>
-            <p>Catégorie : {{ program.category.name }}</p>
-            <ul>
-                {% for season in seasons %}
-                    <li><a href="{{ path('program_season_show', {slug: program.slug, season: season.id}) }}">Saison {{ season.number }}</a></li>
-                {% endfor %}
-            </ul>
-            <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
+    <section>
+        <div class="media">
+            <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+            <div class="media-body">
+                <h1 class="mt-0">{{ program.title }}</h1>
+                <p>{{ program.summary }}</p>
+                <strong>Acteurs :</strong>
+                <ul>
+                    {% for actor in program.actors %}
+                        <li><a href="{{ path('actor_show', {id: actor.id}) }}">{{ actor.name }}</a></li>
+                    {% else %}
+                        <li>Aucun acteur pour cette série</li>
+                    {% endfor %}
+                </ul>
+                <p>Catégorie : {{ program.category.name }}</p>
+                <ul>
+                    {% for season in seasons %}
+                        <li><a href="{{ path('program_season_show', {slug: program.slug, season: season.id}) }}">Saison {{ season.number }}</a></li>
+                    {% endfor %}
+                </ul>
+                <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
+            </div>
         </div>
-    </div>
+    </section>
 {% endblock %}
