--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -33,9 +33,11 @@
         </form>
         {% if app.user %}
             {{ app.user.email }}
-            <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+            <a class="ml-1 mr-1" href="{{ path('profile_index') }}">Mon compte</a>
+            <a class="ml-1 mr-1" href="{{ path('app_logout') }}">Se déconnecter</a>
         {% else %}
-            <a href="{{ path('app_login') }}"> Se connecter</a>
+            <a class="ml-1 mr-1" href="{{ path('app_register') }}">Créer un compte</a>
+            <a class="ml-1 mr-1" href="{{ path('app_login') }}">Se connecter</a>
         {% endif %}
     </div>
 </nav>
