--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -7,6 +7,10 @@
 {% block body %}
     <section class="index">
         <h1>Liste des séries</h1>
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <button>Search</button>
+        {{ form_end(form) }}
         <div class="container"></div>
         <div class="row justify-content-around">
             {% for program in programs %}
