--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="/build/css/app.css">
         <link rel="icon" type="image/png" href="{{ asset('build/favicon.png') }}" />
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -14,11 +13,20 @@
     <header>
         {% include '/include/_navbar.html.twig' %}
     </header>
+    <section>
+        {% for category, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </section>
+
         {% block body %}{% endblock %}
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
         <img src="{{ asset('build/path_to_image.png') }}" alt=""/>
-        <script src="/build/app.js"></script>
     </body>
 </html>
