--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,7 +1,8 @@
 @import 'variables.scss';
 
 body {
-    padding-left: 30px;
+    padding-top: 62px;
+    background-color: $primary;
 }
 
 .navbar {
@@ -13,8 +14,12 @@ body {
     z-index: 10;
 }
 
-.logo {
+.navbar .logo {
     width: 50px;
+}
+
+li {
+    color: $secondary;
 }
 
 .accueil {
@@ -26,18 +31,18 @@ body {
 }
 
 .accueil a {
-    top: 1000px;
+    top: 1200px;
 }
+
+.accueil h1 {
+     margin-top: 200px;
+     font-family: 'Sail', sans-serif;
+     font-size: 10rem;
+ }
 
 h2 {
     text-align: center;
     font-family: 'Salsa', sans-serif;
-}
-
-.accueil h1 {
-    margin-top: 200px;
-    font-family: 'Sail', sans-serif;
-    font-size: 10rem;
 }
 
 h1, h2 {
@@ -50,18 +55,11 @@ h1, h2 {
     font-size: 1.5rem;
     padding: 0;
 }
-body {
-    background-color: $primary;
-}
 
 .accueil {
     text-align: center;
     margin-top: 100px;
 
-}
-
-.button {
-    text-align: center;
 }
 
 p {
@@ -70,26 +68,8 @@ p {
     text-align: left;
 }
 
-.movie {
-    border: 2px solid black;
-    border-radius: 8px;
-    margin: 50px 0;
-    padding-left: 0;
-    box-shadow: $box-shadow;
-}
-
-.poster {
-    padding-left: 0;
-    border-radius: 8px 0 0 8px;
-    height: 100%;
-    width: 100%;
-}
 
 a {
     color: $secondary;
-}
-
-section {
-    margin-top: 80px;
 }
 
