--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -8,8 +8,16 @@
             <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
             <div class="media-body">
                 <h1 class="mt-0">{{ program.title }}</h1>
-                <p>{{ program.summary }}</p>
-                <strong>Acteurs :</strong>
+                {% if app.user %}
+                <a id="watchlist">
+                    <i id="watchlistIcon" class="{{ app.user.isInWatchlist(program) ? 'fas' : 'far' }} fa-heart watchlist" data-href="{{ path("program_watchlist", { id: program.id}) }}"></i>
+                </a>
+                {% endif %}
+                <p>Synopsis</p>
+                <ul>
+                    <li>{{ program.summary }}</li>
+                </ul>
+                <p>Acteurs :</p>
                 <ul>
                     {% for actor in program.actors %}
                         <li><a href="{{ path('actor_show', {id: actor.id}) }}">{{ actor.name }}</a></li>
@@ -17,14 +25,23 @@
                         <li>Aucun acteur pour cette série</li>
                     {% endfor %}
                 </ul>
-                <p>Catégorie : {{ program.category.name }}</p>
+                <p>Catégorie :</p>
+                <ul>
+                    <li>{{ program.category.name }}</li>
+                </ul>
                 <ul>
                     {% for season in seasons %}
                         <li><a href="{{ path('program_season_show', {slug: program.slug, season: season.id}) }}">Saison {{ season.number }}</a></li>
                     {% endfor %}
                 </ul>
-                <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
+
+                <a class="btn btn-secondary" href="{{ path('program_index') }}">Retour à la liste des programmes</a>
             </div>
         </div>
     </section>
+{% endblock %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('watchlist') }}
+    {{ parent() }}
 {% endblock %}
