--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -10,7 +10,7 @@
                 <a class="nav-link text-secondary text-home" href="#">Wild Series<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-secondary" href="/categories/">Link</a>
+                <a class="nav-link text-secondary" href="/categories/">{{ 'link'|trans }}</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -26,18 +26,28 @@
             <li class="nav-item">
                 <a class="nav-link disabled text-secondary" href="#">Disabled</a>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-secondary" href="{{ path('app_index', {'_locale': 'fr'}) }}" id="translateDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false"><span class="flag-icon flag-icon-fr"> </span>{{ 'language'|trans }}</a>
+                <div class="dropdown-menu" aria-labelledby="translateDropdown">
+                    <a class="dropdown-item" href="{{ path('app_index', {'_locale':'fr'}) }}"><span class="flag-icon flag-icon-fr"> </span>Français</a>
+                    <a class="dropdown-item" href="{{ path('app_index', {'_locale':'en'}) }}"><span class="flag-icon flag-icon-en"> </span>English</a>
+                    <a class="dropdown-item" href="{{ path('app_index', {'_locale':'es'}) }}"><span class="flag-icon flag-icon-es"> </span>Spain</a>
+                </div>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">{{ 'search'|trans }}</button>
         </form>
         {% if app.user %}
-            {{ app.user.email }}
-            <a class="ml-1 mr-1" href="{{ path('profile_index') }}">Mon compte</a>
-            <a class="ml-1 mr-1" href="{{ path('app_logout') }}">Se déconnecter</a>
+            {% trans with {'%username%': app.user.email} %}
+                hello_username
+            {% endtrans %} !
+            <a class="ml-1 mr-1" href="{{ path('profile_index') }}">{{ 'account'|trans }}</a>
+            <a class="ml-1 mr-1" href="{{ path('app_logout') }}">{{ 'account.logout'|trans }}</a>
         {% else %}
-            <a class="ml-1 mr-1" href="{{ path('app_register') }}">Créer un compte</a>
-            <a class="ml-1 mr-1" href="{{ path('app_login') }}">Se connecter</a>
+            <a class="ml-1 mr-1" href="{{ path('app_register') }}">{{ 'account.create'|trans}}</a>
+            <a class="ml-1 mr-1" href="{{ path('app_login') }}">{{ 'account.login'|trans }}</a>
         {% endif %}
     </div>
 </nav>
