--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <section class="accueil">
         <h1>Wild Series</h1>
-        <a href="{{ path('program_index') }}">Voir la liste des programmes</a>
+        <a href="{{ path('program_index') }}">{{ 'see.programs.plug'|trans }}</a>
     </section>
 
 {% endblock %}
