--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>{% block title %}Bienvenue!{% endblock %}</title>
+        <title>{% block title %}{{ 'welcome'|trans }}{% endblock %}</title>
         <link rel="icon" type="image/png" href="{{ asset('build/favicon.png') }}" />
         <script src="https://kit.fontawesome.com/fed12f4e3a.js" crossorigin="anonymous"></script>
         {% block stylesheets %}
