--- a/templates/episode/newEpisodeEmail.html.twig
+++ b/templates/episode/newEpisodeEmail.html.twig
@@ -5,6 +5,6 @@
         <h1 style="color:#F4A261;">Un nouvel épisode {{ episode.title }} est maintenant disponible</h1>
         <p style="color:#F4A261;">Bonjour, l'épisode n°{{ episode.number}} {{ episode.title }} de la saison {{ episode.season.number }} de {{ episode.season.program.title}} est désormait disponible sur  Wild Series</p>
         <p style="color:#F4A261;">Synopsis : {{episode.synopsis }}
-        <p><a style="color:#F4A261; border-radius: 8px; background: #264653; text-decoration: none;" href="http://127.0.0.1:8000/programs/{{episode.season.program.slug}}/seasons/{{ episode.season.id }}/episodes/{{ episode.slug }}">Voir l'épisode</a></p>
+        <p><a style="color:#F4A261; border-radius: 8px; background: #264653; text-decoration: none;" href="http://127.0.0.1:8000/programs/{{episode.season.program.slug}}/seasons/{{ episode.season.id }}/episodes/{{ episode.slug }}">{{ 'see.episode'|trans }}</a></p>
     </section>
 {% endblock %}
