--- a/templates/layoutEmail.html.twig
+++ b/templates/layoutEmail.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>New program</title>
+    <title>{{ 'new.program'|trans }}</title>
 </head>
 <body>
 {% block body %}{% endblock %}
