--- a/templates/program/edit.html.twig
+++ b/templates/program/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Program{% endblock %}
+{% block title %}{{ 'edit.program'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit Program</h1>
+    <h1>{{ 'edit.program'|trans }}</h1>
 
     {{ include('program/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('program_index') }}">back to list</a>
+    <a href="{{ path('program_index') }}">{{ 'back.list'|trans }}</a>
 {% endblock %}
