--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig'%}
 
 {% block body %}
-    <h1>Ajouter un foutu programme</h1>
+    <h1>{{ 'add.program'|trans }}</h1>
     {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
     {{ form_widget(form) }}
     <input type="submit" value="Add Program">
