--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-    <a class="navbar-brand text-secondary" href="/"><img class="logo" src="{{ asset('build/logo_wild_series.png') }}"></a>
+    <a class="navbar-brand text-secondary" href="/fr"><img class="logo" src="{{ asset('build/logo_wild_series.png') }}"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,6 +32,13 @@
                     <a class="dropdown-item" href="{{ path('app_index', {'_locale':'fr'}) }}"><span class="flag-icon flag-icon-fr"> </span>Français</a>
                     <a class="dropdown-item" href="{{ path('app_index', {'_locale':'en'}) }}"><span class="flag-icon flag-icon-en"> </span>English</a>
                     <a class="dropdown-item" href="{{ path('app_index', {'_locale':'es'}) }}"><span class="flag-icon flag-icon-es"> </span>Spain</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a class="nav-link dropdown-toggle text-secondary" href="#" role="button" id="dropdownMenuCategories" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuCategories">
+                    {{ render(controller(
+                        'App\\Controller\\DefautController::navbarTop'))}}
                 </div>
             </li>
         </ul>
