--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <section>
         <div class="media">
-            <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+            <img class="align-self-start mr-3" src="{{ asset('uploads/' ~ program.poster) }}" alt="{{ program.title }} poster">
             <div class="media-body">
                 <h1 class="mt-0">{{ program.title }}</h1>
                 {% if app.user %}
